--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,14 @@
+/programmers/
+/sk텔레콤/
+/sort/
+/toss/
+/다이나믹_프로그래밍/
+/백트래킹/
+/브루트포스/
 /삼성SW코딩테스트/
-/N과M/
-/Combination/
+/자료구조/
+/최단경로/
 /카카오인턴/
+/투포인터/
+/해싱/
 /BOJ/
-/SWEA/
