--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,15 @@
+/algo/
+/eBayKorea/
+/programmers/
+/sk텔레콤/
+/sort/
+/toss/
+/다이나믹_프로그래밍/
+/백트래킹/
+/브루트포스/
+/삼성SW코딩테스트/
+/자료구조/
+/최단경로/
 /카카오인턴/
-/BOJ/
-/SWEA/
+/투포인터/
+/해싱/
