--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,9 +1,3 @@
-/algo/
-/eBayKorea/
-/programmers/
-/sk텔레콤/
-/sort/
-/toss/
 /다이나믹_프로그래밍/
 /백트래킹/
 /브루트포스/
@@ -13,3 +7,4 @@
 /카카오인턴/
 /투포인터/
 /해싱/
+/BOJ/
