--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,20 @@
+/SWEA/
+/Subset/
+/algo/
+/eBayKorea/
+/programmers/
+/sk텔레콤/
+/sort/
+/toss/
 /다이나믹_프로그래밍/
 /백트래킹/
 /브루트포스/
 /삼성SW코딩테스트/
 /자료구조/
 /최단경로/
+/카카오_예선테스트/
 /카카오인턴/
+/테스트용패키징/
 /투포인터/
 /해싱/
 /BOJ/
-/카카오_예선테스트/
-/테스트용패키징/
