--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,28 @@
+/BOJ/
+/Codility/
+/ComSA/
+/Combination/
+/HashMap/
+/KMP/
+/KT대비_1028/
+/KT대비_1029/
+/KT대비_1030/
+/LGCNS_1016/
+/MST/
+/N과M/
+/SWEA/
+/SW역량테스트_1009/
+/SW역량테스트_1010/
+/SW역량테스트_1011/
+/SW역량테스트_1012/
+/SW역량테스트_1013/
+/SW역량테스트_1014/
+/SW역량테스트_1015/
+/SW역량테스트_1016/
+/Subset/
+/TEST/
+/TEST2/
+/TILA_1006/
 /algo/
 /eBayKorea/
 /programmers/
@@ -5,9 +30,20 @@
 /sort/
 /toss/
 /다이나믹_프로그래밍/
+/면접대비_1028/
+/면접대비_1103/
 /백트래킹/
 /브루트포스/
 /삼성SW코딩테스트/
+/순열_조합/
+/아르키메데스의체/
+/알고리즘_1019/
+/알고리즘_1020/
+/알고리즘_1021/
+/알고리즘_1022/
+/알고리즘_1023/
+/알고리즘_1129/
+/위상정렬/
 /자료구조/
 /최단경로/
 /카카오_예선테스트/
@@ -15,4 +51,3 @@
 /테스트용패키징/
 /투포인터/
 /해싱/
-/TILA_1006/
